# codegen

./: LICENSE  MANIFEST.in  Pipfile  README.md  setup.cfg  tox.ini
.github/workflows/: main.yml
src/codegen/: __init__.py  codegen.py  jmetergen.py
tests/: tests.py
