[metadata]
name = codegen
version = attr: codegen.__version__
author = ciiseven
author_email = ciiseven@yeah.net
description = My Awesome Project!
keywords = CodeGen
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
python_requires > = 3.9
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =

[options.packages.find]
where = src
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]

# Packaging project data in module codegen.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py